--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "dynamic-proxy",
   "description": "Change proxy quickly.",
-  "keywords": ["webpack-dev-server", "express", "proxy", "dynamic"],
+  "keywords": [
+    "webpack-dev-server",
+    "express",
+    "proxy",
+    "dynamic"
+  ],
   "version": "1.0.0",
   "private": false,
   "main": "./dist/index.js",
@@ -17,10 +22,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.1"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
+    "express": "^4.17.1",
+    "chalk": "^2.4.2",
     "chokidar": "^3.5.2",
     "http-proxy-middleware": "^2.0.1"
   },
@@ -29,11 +35,12 @@
     "url": "https://github.com/HULANG-BTB/dynamic-proxy.git"
   },
   "files": [
-    "./dist",
+    "dist/*",
     "README.MD",
     "LICENSE"
   ],
   "LICENSE": "MIT",
+  "types": "./dist/index.d.ts",
   "typings": "./dist/index.d.ts",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
