--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "express": "^4.17.1",
     "@types/express": "^4.17.13",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "chalk": "^2.4.2",
-    "chokidar": "^3.5.2",
+    "chalk": "2.4.2",
+    "chokidar": "3.5.2",
     "http-proxy-middleware": "^2.0.1"
   },
   "repository": {
