--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "chalk": "2.4.2",
-    "chokidar": "3.5.2",
-    "http-proxy-middleware": "^2.0.1"
+    "chalk": "^2.1.0",
+    "chokidar": "^2.1.8",
+    "http-proxy-middleware": "0.19.1"
   },
   "repository": {
     "type": "git",
