--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "express": "^4.17.1",
     "@types/express": "^4.17.13",
+    "express": "^4.17.1",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "chokidar": "^2.1.8",
-    "http-proxy-middleware": "0.19.1"
+    "http-proxy-middleware": "^2.0.1"
   },
   "repository": {
     "type": "git",
